Dodałem wyszukiwanie po marce i modelu samochodu

--- a/Solution1/CarHire.WebUI/Web.config
+++ b/Solution1/CarHire.WebUI/Web.config
@@ -6,6 +6,8 @@
 <configuration>
   <connectionStrings>
     <add name="EfDbContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=CarHire;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="CarHireEntities" connectionString="metadata=res://*/Users.csdl|res://*/Users.ssdl|res://*/Users.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;initial catalog=CarHire;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="CarHireEntities1" connectionString="metadata=res://*/MyModel.csdl|res://*/MyModel.ssdl|res://*/MyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;initial catalog=CarHire;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="CarHireEntities2" connectionString="metadata=res://*/UserModel.csdl|res://*/UserModel.ssdl|res://*/UserModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;initial catalog=CarHire;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 
