Poprawiłem paginacje dla wyszukiwania

--- a/Solution1/CarHire.WebUI/CarHire.WebUI.csproj
+++ b/Solution1/CarHire.WebUI/CarHire.WebUI.csproj
@@ -284,9 +284,7 @@
       <Name>CarHire.Domain</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Views\CarListMainModel\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
