--- a/Solution1/CarHire.WebUI/CarHire.WebUI.csproj
+++ b/Solution1/CarHire.WebUI/CarHire.WebUI.csproj
@@ -267,6 +267,7 @@
     <Content Include="Views\Shared\_Layout.Mobile.cshtml" />
     <Content Include="Views\Nav\Menu.Mobile.cshtml" />
     <Content Include="Views\Car\Search.cshtml" />
+    <Content Include="Views\Car\BusList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
