Strona ze szczegółami

--- a/Solution1/CarHire.WebUI/CarHire.WebUI.csproj
+++ b/Solution1/CarHire.WebUI/CarHire.WebUI.csproj
@@ -269,6 +269,7 @@
     <Content Include="Views\Nav\Menu.Mobile.cshtml" />
     <Content Include="Views\Car\Search.cshtml" />
     <Content Include="Views\Rental\ExportToExcel.cshtml" />
+    <Content Include="Views\Car\Details.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
