--- a/Solution1/CarHire.UnitTests/CarHire.UnitTests.csproj
+++ b/Solution1/CarHire.UnitTests/CarHire.UnitTests.csproj
@@ -103,6 +103,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="App_Start\NinjectWebCommon.cs" />
+    <Compile Include="Tests\ImageTest.cs" />
     <Compile Include="Tests\PagintionTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\CarTest.cs" />
