--- a/Solution1/CarHire.WebUI/CarHire.WebUI.csproj
+++ b/Solution1/CarHire.WebUI/CarHire.WebUI.csproj
@@ -271,6 +271,7 @@
     <Content Include="Views\Rental\ExportToExcel.cshtml" />
     <Content Include="Views\Car\Details.cshtml" />
     <Content Include="Views\Car\BusList.cshtml" />
+    <Content Include="Views\Shared\BusSummary.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
